kubernetes/apps/network/external-services/adguard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  clusterIP: None
  type: ClusterIP
  ipFamilyPolicy: SingleStack
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard
subsets:
  - addresses:
      - ip: 192.168.1.83
    ports:
      - name: http
        port: 3000
        protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  annotations:
    hajimari.io/appName: 'adguard'
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    kubernetes.io/ingress.class: external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Adguard"
    gethomepage.dev/description: ""
    gethomepage.dev/group: Security
    gethomepage.dev/icon: "adguard"
    gethomepage.dev/ping: "adguard.${SECRET_DOMAIN}"

    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia.security.svc.cluster.local/api/verify
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}?rm=$request_method"
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Method $request_method;

spec:
  ingressClassName: external
  rules:
    - host: &host "adguard.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 3000
  tls:
    - hosts:
        - *host
