kubernetes/apps/network/external-services/console-s3-alsa.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: console01
  namespace: networking
  annotations:
    field.cattle.io/ipAddresses: '["${ALSA_IP}"]'
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: console-port
      port: 9001
      protocol: TCP
      targetPort: 9001
  sessionAffinity: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: console01
subsets:
  - addresses:
      - ip: "${ALSA_IP}"
    ports:
      - name: https
        port: 9001
        protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: networking
  name: console01
  annotations:
    hajimari.io/appName: 'Minio EU-EAST'
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    kubernetes.io/ingress.class: external
    ingress.kubernetes.io/configuration-snippet: "proxy_set_header Host $http_host;\nproxy_set_header
      X-Real-IP $remote_addr;\nproxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      \     \nproxy_http_version 1.1;\nproxy_set_header Upgrade $http_upgrade;\nproxy_set_header
      Connection $connection_upgrade;      "
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |-
      client_max_body_size 100G;
      server_tokens off;
      proxy_hide_header X-Powered-By;
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Minio Chris"
    gethomepage.dev/description: "Espace de stockage S3"
    gethomepage.dev/group: Stockage
    gethomepage.dev/icon: "minio.png"
    gethomepage.dev/siteMonitor: "minio-eu-east.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: &host "minio-eu-east.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: console01
                port:
                  number: 9001
  tls:
    - hosts:
        - *host
      secretName: *host
