kubernetes/apps/network/external-services/dtu.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dtu
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  clusterIP: None
  type: ClusterIP
  ipFamilyPolicy: SingleStack
---
apiVersion: v1
kind: Endpoints
metadata:
  name: dtu
subsets:
  - addresses:
      - ip: 192.168.1.15
    ports:
      - name: http
        port: 80
        protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dtu
  annotations:
    hajimari.io/appName: 'dtu'
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    kubernetes.io/ingress.class: external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "DTU"
    gethomepage.dev/description: "Solar telemetry gateway"
    gethomepage.dev/group: Automatisation
    gethomepage.dev/icon: "mdi-sun-wireless"
    gethomepage.dev/ping: "dtu.${SECRET_DOMAIN}"

    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia.security.svc.cluster.local/api/verify
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}?rm=$request_method"
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Method $request_method;

spec:
  ingressClassName: external
  rules:
    - host: &host "dtu.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dtu
                port:
                  number: 80
  tls:
    - hosts:
        - *host
