kubernetes/apps/network/external-services/plex.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 32400
  clusterIP: None
  type: ClusterIP
  ipFamilyPolicy: SingleStack
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex
subsets:
  - addresses:
      - ip: 192.168.1.101
    ports:
      - name: http
        port: 32400
        protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    hajimari.io/appName: 'plex'
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    kubernetes.io/ingress.class: external
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Accept-Encoding "";
      sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.devbu.io/css/base/plex/nord.css"></head>';
      sub_filter_once on;

      location = / {
        if ($http_x_plex_device = ""){
          return 301 $scheme://$host/web/index.html;
        }
      }

    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "plex"
    gethomepage.dev/description: "Stream Movies & TV Shows"
    gethomepage.dev/group: Média
    gethomepage.dev/icon: "plex.png"
spec:
  ingressClassName: external
  rules:
    - host: &host "plex.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 80
  tls:
    - hosts:
        - *host
